--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -56,7 +56,6 @@ allow 107.189.11.111;
 allow 107.189.11.113;
 allow 107.189.1.160;
 allow 107.189.1.175;
-allow 107.189.1.228;
 allow 107.189.12.3;
 allow 107.189.12.7;
 allow 107.189.12.88;
@@ -220,6 +219,7 @@ allow 172.105.174.195;
 allow 172.105.20.12;
 allow 172.232.141.150;
 allow 172.232.209.254;
+allow 172.233.57.187;
 allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.245.251.232;
@@ -238,7 +238,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.143.138;
 allow 176.97.114.202;
-allow 177.149.154.91;
+allow 177.149.147.193;
 allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -992,6 +992,7 @@ allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
@@ -1055,8 +1056,10 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c09::f03c:95ff:fe2d:cc40;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2600:3c0e::f03c:95ff:feaa:89b0;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:f9f3:0:2::319;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
@@ -1286,6 +1289,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1720,7 +1724,6 @@ allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1733,6 +1736,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1829,6 +1833,7 @@ allow 45.95.169.230;
 allow 45.95.169.24;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
