--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -76,7 +76,6 @@ deny 107.189.30.49;
 deny 107.189.30.69;
 deny 107.189.30.86;
 deny 107.189.3.11;
-deny 107.189.31.232;
 deny 107.189.31.33;
 deny 107.189.4.12;
 deny 107.189.4.209;
@@ -137,6 +136,7 @@ deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
 deny 13.126.29.181;
+deny 135.181.4.118;
 deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
@@ -840,6 +840,7 @@ deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
+deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 202.182.99.129;
 deny 203.159.90.181;
 deny 204.137.14.104;
@@ -1096,7 +1097,6 @@ deny 2605:6400:20:d54:78d8:62d7:9b5a:6ae9;
 deny 2605:6400:20:ff9::1;
 deny 2605:6400:30:e948:4cee:191b:1e55:25b3;
 deny 2605:6400:30:ea52:4246:fb82:f36c:8ede;
-deny 2605:6400:30:ea58:51a1:e174:d185:d6f1;
 deny 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
 deny 2605:6400:30:eb71:51b7:4869:7579:3aa1;
 deny 2605:6400:30:ebb6:532:acc:65:31;
@@ -1354,7 +1354,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1637,6 +1636,7 @@ deny 2a0e:bfc0:0:d::d927;
 deny 2a0e:bfc0:0:e::7dc2;
 deny 2a0e:bfc0:0:f::e538;
 deny 2a0e:bfc7:0:2::46e2;
+deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
@@ -1822,6 +1822,7 @@ deny 45.84.107.74;
 deny 45.84.107.76;
 deny 45.84.107.97;
 deny 45.9.148.50;
+deny 45.9.156.100;
 deny 45.9.156.13;
 deny 45.9.168.108;
 deny 45.9.168.113;
@@ -1861,7 +1862,6 @@ deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
