--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -111,6 +111,7 @@ deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
+deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8902::f03c:95ff:fe15:5bba;
@@ -172,7 +173,6 @@ deny 2605:6400:20:d54:78d8:62d7:9b5a:6ae9;
 deny 2605:6400:20:ff9::1;
 deny 2605:6400:30:e948:4cee:191b:1e55:25b3;
 deny 2605:6400:30:ea52:4246:fb82:f36c:8ede;
-deny 2605:6400:30:ea58:51a1:e174:d185:d6f1;
 deny 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
 deny 2605:6400:30:eb71:51b7:4869:7579:3aa1;
 deny 2605:6400:30:ebb6:532:acc:65:31;
@@ -429,7 +429,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -712,6 +711,7 @@ deny 2a0e:bfc0:0:d::d927;
 deny 2a0e:bfc0:0:e::7dc2;
 deny 2a0e:bfc0:0:f::e538;
 deny 2a0e:bfc7:0:2::46e2;
+deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
