--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -578,11 +578,13 @@ allow 190.211.254.97;
 allow 192.108.48.150;
 allow 192.124.180.154;
 allow 192.210.160.31;
+allow 192.210.160.35;
 allow 192.210.214.10;
 allow 192.210.255.47;
 allow 192.3.141.157;
 allow 192.3.173.79;
 allow 192.3.228.229;
+allow 192.3.241.151;
 allow 192.42.116.13;
 allow 192.42.116.14;
 allow 192.42.116.15;
@@ -1034,7 +1036,6 @@ allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
-allow 2.56.177.14;
 allow 2.58.56.12;
 allow 2.58.56.220;
 allow 2.58.56.35;
@@ -1343,6 +1344,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1849,6 +1851,7 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
