--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -578,11 +578,13 @@ set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
 set_real_ip_from 192.124.180.154;
 set_real_ip_from 192.210.160.31;
+set_real_ip_from 192.210.160.35;
 set_real_ip_from 192.210.214.10;
 set_real_ip_from 192.210.255.47;
 set_real_ip_from 192.3.141.157;
 set_real_ip_from 192.3.173.79;
 set_real_ip_from 192.3.228.229;
+set_real_ip_from 192.3.241.151;
 set_real_ip_from 192.42.116.13;
 set_real_ip_from 192.42.116.14;
 set_real_ip_from 192.42.116.15;
@@ -1034,7 +1036,6 @@ set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
-set_real_ip_from 2.56.177.14;
 set_real_ip_from 2.58.56.12;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.35;
@@ -1343,6 +1344,7 @@ set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1849,6 +1851,7 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
